--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "undefsafe": "^2.0.5"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.14.1",
+    "@types/xml": "^1.0.11",
     "nodemon": "^3.1.9",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
