--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,6 @@ jobs:
           git config --global user.name "PPV Updater"
           git config --global user.email "github@eyezah.com"
           git add m3u
+          git add xml
           git commit -m "Automatically update M3U playlists"
           git push
